# godot-plugin

./: Cargo.toml
src/: lark.rs  lib.rs  scene_manager.rs
src/debug/: mod.rs
src/gm/: mod.rs  ui.rs
src/lark/: bitable.rs  error.rs  spreadsheet.rs
