[package]
name = "godot-plugin"
version = "0.1.0"
edition = "2024"
authors = ["linyiyu <linyiyu1992@gmail.com>"]

[dependencies]
godot = { version = "0.2", optional = true }
godot_tokio = { version = "0.2", optional = true }
# open-lark = { version = "0.3", optional = true }
open-lark = { git = "https://github.com/foxzool/open-lark.git", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = [] }
thiserror = "2.0"
moka = { version = "0.12", features = ["future"] }

[features]
default = ["ddt"]

godot = ["dep:godot", "dep:godot_tokio"]
ddt = ["dep:open-lark"]
