[package]
name = "godot-plugin"
version = "0.1.0"
edition = "2024"
authors = ["linyiyu <linyiyu1992@gmail.com>"]

[dependencies]
godot = { version = "0.2", optional = true }
godot_tokio = { version = "0.3", optional = true }
open-lark = { version = "0.3", optional = true }
# open-lark = { git = "https://github.com/attila-lin/open-lark.git", branch = "dev/helper", optional = true }
# open-lark = { path = "../open-lark", optional = true }
poem = { version = "3", features = [], optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = [] }
thiserror = "2.0"
moka = { version = "0.12", features = ["future"] }

[features]
default = ["ddt"]

gm = ["godot", "dep:poem"]

godot = ["dep:godot", "dep:godot_tokio"]
ddt = ["dep:open-lark"]
